[gd_scene load_steps=17 format=3 uid="uid://5uka736pdmeg"]

[ext_resource type="Script" path="res://Scripts/UI.gd" id="1_whd0r"]
[ext_resource type="FontFile" uid="uid://bto4ne66q8d5i" path="res://Fonts/Kiddy Play.ttf" id="2_65w6w"]
[ext_resource type="Texture2D" uid="uid://b2mgf5rvj0dt1" path="res://icon.svg" id="3_6puyf"]

[sub_resource type="FontVariation" id="FontVariation_ghamm"]
base_font = ExtResource("2_65w6w")
spacing_glyph = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y2hbl"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_laei6"]
bg_color = Color(0.6, 0.0117647, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_88wgf"]
bg_color = Color(0.337255, 0.388235, 0.737255, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_blend = true

[sub_resource type="StyleBoxLine" id="StyleBoxLine_l3cnf"]
color = Color(0.168627, 0.168627, 0.454902, 1)
thickness = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nhil2"]
bg_color = Color(0.701961, 0.572549, 0.203922, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_blend = true

[sub_resource type="StyleBoxLine" id="StyleBoxLine_uy6qs"]
color = Color(0.454902, 0.341176, 0.121569, 1)
thickness = 15

[sub_resource type="StyleBoxLine" id="StyleBoxLine_5da4t"]
color = Color(0.247059, 0.184314, 0.0666667, 1)
grow_begin = -20.0
grow_end = -20.0
thickness = 8
vertical = true

[sub_resource type="StyleBoxLine" id="StyleBoxLine_rlbkj"]
color = Color(0.247059, 0.184314, 0.0666667, 1)
grow_begin = -20.0
grow_end = -20.0
thickness = 8
vertical = true

[sub_resource type="Animation" id="Animation_4sweu"]
resource_name = "DeathScreen"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DeathScreen/CenterContainer:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -648), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DeathScreen/PanelContainer:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_fdi60"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DeathScreen/CenterContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -648)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DeathScreen/PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ShopScreen/PanelContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ShopScreen/CenterContainer:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1152, 0)]
}

[sub_resource type="Animation" id="Animation_lo5lj"]
resource_name = "ShopScreen"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShopScreen/PanelContainer:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ShopScreen/CenterContainer:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-1152, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l4k7y"]
_data = {
"DeathScreen": SubResource("Animation_4sweu"),
"RESET": SubResource("Animation_fdi60"),
"ShopScreen": SubResource("Animation_lo5lj")
}

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_whd0r")

[node name="ShopButton" type="Button" parent="."]
offset_left = 848.0
offset_top = 584.0
offset_right = 960.0
offset_bottom = 640.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_65w6w")
theme_override_font_sizes/font_size = 40
text = "shop"

[node name="Gold" type="Label" parent="."]
offset_left = 984.0
offset_top = 592.0
offset_right = 1096.0
offset_bottom = 625.0
theme_override_fonts/font = SubResource("FontVariation_ghamm")
theme_override_font_sizes/font_size = 30
text = "0 : Gold"

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = 1120.0
offset_top = 544.0
offset_right = 1144.0
offset_bottom = 640.0
theme_override_styles/background = SubResource("StyleBoxFlat_y2hbl")
theme_override_styles/fill = SubResource("StyleBoxFlat_laei6")
max_value = 15.0
value = 7.5
fill_mode = 3
show_percentage = false

[node name="DeathScreen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PanelContainer" type="PanelContainer" parent="DeathScreen"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="DeathScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -648.0
offset_bottom = -648.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PanelContainer" type="PanelContainer" parent="DeathScreen/CenterContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_88wgf")

[node name="MarginContainer" type="MarginContainer" parent="DeathScreen/CenterContainer/PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="DeathScreen/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="DeathScreen/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 25
theme_override_fonts/font = ExtResource("2_65w6w")
theme_override_font_sizes/font_size = 120
text = "YOU DIED"

[node name="HSeparator" type="HSeparator" parent="DeathScreen/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40
theme_override_styles/separator = SubResource("StyleBoxLine_l3cnf")

[node name="RetryBattle" type="Button" parent="DeathScreen/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_65w6w")
theme_override_font_sizes/font_size = 45
text = "Retry Battle"

[node name="ReturnToWorld" type="Button" parent="DeathScreen/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_65w6w")
theme_override_font_sizes/font_size = 45
text = "Return to World
"

[node name="TextureButton" type="TextureButton" parent="DeathScreen/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ShopScreen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PanelContainer" type="PanelContainer" parent="ShopScreen"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="ShopScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1152.0
offset_right = -1152.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PanelContainer" type="PanelContainer" parent="ShopScreen/CenterContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nhil2")

[node name="MarginContainer" type="MarginContainer" parent="ShopScreen/CenterContainer/PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="ShopScreen/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="ShopScreen/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 25
theme_override_fonts/font = ExtResource("2_65w6w")
theme_override_font_sizes/font_size = 120
text = "shop"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="ShopScreen/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40
theme_override_styles/separator = SubResource("StyleBoxLine_uy6qs")

[node name="HBoxContainer" type="HBoxContainer" parent="ShopScreen/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ShopScreen/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="FasterShooting" type="Button" parent="ShopScreen/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_65w6w")
theme_override_font_sizes/font_size = 45
disabled = true
text = "faster shooting"

[node name="MoreProjectiles" type="Button" parent="ShopScreen/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_65w6w")
theme_override_font_sizes/font_size = 45
disabled = true
text = "more projectiles"

[node name="GreaterDamage" type="Button" parent="ShopScreen/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_65w6w")
theme_override_font_sizes/font_size = 45
disabled = true
text = "greater damage"

[node name="VSeparator" type="VSeparator" parent="ShopScreen/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
theme_override_styles/separator = SubResource("StyleBoxLine_5da4t")

[node name="VBoxContainer2" type="VBoxContainer" parent="ShopScreen/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MachineGun" type="Button" parent="ShopScreen/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_65w6w")
theme_override_font_sizes/font_size = 45
disabled = true
text = "machine gun"

[node name="ShotGun" type="Button" parent="ShopScreen/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_65w6w")
theme_override_font_sizes/font_size = 45
disabled = true
text = "shotgun"

[node name="Rifle" type="Button" parent="ShopScreen/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_65w6w")
theme_override_font_sizes/font_size = 45
disabled = true
text = "Rifle"

[node name="VBoxContainer3" type="VBoxContainer" parent="ShopScreen/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
alignment = 2

[node name="MiniGun" type="Button" parent="ShopScreen/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_65w6w")
theme_override_font_sizes/font_size = 45
disabled = true
text = "mini gun"

[node name="PumpShotGun" type="Button" parent="ShopScreen/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_65w6w")
theme_override_font_sizes/font_size = 45
disabled = true
text = "Pump ShotGun"

[node name="Bazooka" type="Button" parent="ShopScreen/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_65w6w")
theme_override_font_sizes/font_size = 45
disabled = true
text = "bazooka"

[node name="VSeparator2" type="VSeparator" parent="ShopScreen/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
theme_override_styles/separator = SubResource("StyleBoxLine_rlbkj")

[node name="CloseShop" type="TextureButton" parent="ShopScreen/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_6puyf")
stretch_mode = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_l4k7y")
}

[connection signal="pressed" from="ShopButton" to="." method="_on_shop_button_pressed"]
[connection signal="pressed" from="DeathScreen/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/RetryBattle" to="." method="_on_retry_battle_pressed"]
[connection signal="pressed" from="DeathScreen/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ReturnToWorld" to="." method="_on_return_to_world_pressed"]
[connection signal="pressed" from="ShopScreen/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/FasterShooting" to="." method="_on_faster_shooting_pressed"]
[connection signal="pressed" from="ShopScreen/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CloseShop" to="." method="_on_close_shop_pressed"]
